Bug 160430 - Rotated text is partially cut off on Windows with Skia disabled
Summary: Rotated text is partially cut off on Windows with Skia disabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
24.2.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.3
Keywords: bibisected, bisected, regression
: 157986 158991 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-30 10:47 UTC by Mike Kaganski
Modified: 2024-04-11 05:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
An example with rotated text (10.34 KB, application/vnd.oasis.opendocument.graphics)
2024-03-30 11:20 UTC, Mike Kaganski
Details
Screenshot of the problem (31.81 KB, image/png)
2024-03-30 11:22 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-03-30 10:47:10 UTC
1. Disable Skia;
2. In Draw, add a text box with a word "text";
3. Rotate the text box to 45 degrees.

One of the angles of the text is cut off.
Regression after dfe42e756b37642355356a6035081f4473609832 (vcl: Use HarfBuzz to get glyph bounding rectangle, 2023-07-23).
Comment 1 Mike Kaganski 2024-03-30 11:14:21 UTC
https://gerrit.libreoffice.org/c/core/+/165553
Comment 2 Mike Kaganski 2024-03-30 11:20:44 UTC
Created attachment 193402 [details]
An example with rotated text
Comment 3 Mike Kaganski 2024-03-30 11:22:42 UTC
Created attachment 193403 [details]
Screenshot of the problem

Using Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 24; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded
Comment 4 Commit Notification 2024-04-01 11:06:57 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8962141a12c966b2d891829925e6203bf8d51852

tdf#160430: Fix glyph bounds calculation, and use basegfx::B2DRectangle

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Khaled Hosny 2024-04-02 10:10:12 UTC
*** Bug 157986 has been marked as a duplicate of this bug. ***
Comment 6 Mike Kaganski 2024-04-02 10:11:42 UTC
*** Bug 158991 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2024-04-08 14:57:37 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6f4a949c07eb06345df08c722f8e59e97888a499

tdf#160430: Fix glyph bounds calculation, and use basegfx::B2DRectangle

It will be available in 24.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.